--- a/models/CMakeLists.txt
+++ b/models/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.1)
 
-add_library(models game.cpp pilelist.cpp foundationpile.cpp tableaupile.cpp wastepile.cpp deckpile.cpp pile.cpp deck.cpp)
+add_library(models game.cpp pilelist.cpp foundationpile.cpp tableaupile.cpp wastepile.cpp deckpile.cpp pile.cpp movement.cpp deck.cpp)
 
 set (CMAKE_CXX_FLAGS "-g --coverage -fno-exceptions -fno-inline -Wall -std=c++14 ${CMAKE_CXX_FLAGS}")
